force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Second_Year_Amount_3__c.field-meta.xml
<CustomField>
    <fullName>gr_Second_Year_Amount_3__c</fullName>
    <label>Second Year Amount 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>