force-app/main/default/objects/Budget_Line_Item__c/fields/gr_State_Contribution_3__c.field-meta.xml
<CustomField>
    <fullName>gr_State_Contribution_3__c</fullName>
    <label>State Contribution 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>