force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Subtotal_Costs_Not_Allowable_w_Contg__c.field-meta.xml
<CustomField>
    <fullName>gr_Subtotal_Costs_Not_Allowable_w_Contg__c</fullName>
    <formula>gr_Subtotal_Costs_Not_Allowable__c +  gr_Contingencies_Costs_Not_Allowable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal Costs Not Allowable (w Contg.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>