force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Subtotal_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>gr_Subtotal_Total_Cost__c</fullName>
    <formula>gr_Admin_Legal_Expns_Total_Cost__c +  gr_Land_Total_Cost__c +  gr_Relocation_Total_Cost__c +  gr_Arch_and_Engg_Total_Cost__c  +  gr_Other_Engineering_Total_Costs__c +  gr_Project_Inspection_Total_Cost__c +  gr_Site_Work_Total_Cost__c +  gr_Demolition_Total_Cost__c +  gr_Construction_Total_Cost__c +  gr_Equipment_Total_Cost__c +  gr_Miscellaneous_Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal -Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>