force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Subtotal_Total_Cost_w_Contg__c.field-meta.xml
<CustomField>
    <fullName>gr_Subtotal_Total_Cost_w_Contg__c</fullName>
    <description>Subtotal of total cost with contingencies</description>
    <formula>gr_Subtotal_Total_Cost__c +  gr_Contingencies_Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal Total Cost (w Contg.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>