force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Applicant_Contribution__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Applicant_Contribution__c</fullName>
    <formula>gr_Applicant_Contribution_1__c  + gr_Applicant_Contribution_2__c  + gr_Applicant_Contribution_3__c  + gr_Applicant_Contribution_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Applicant Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>