force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Budget_Categories_1__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Budget_Categories_1__c</fullName>
    <formula>gr_Indirect_Charges_1__c +  gr_Total_Direct_Charges_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Budget Categories 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>