force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Budget_Categories__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Budget_Categories__c</fullName>
    <formula>gr_Total_Budget_Categories_1__c  + gr_Total_Budget_Categories_2__c  +  gr_Total_Budget_Categories_3__c  + gr_Total_Budget_Categories_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Budget Categories</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>