force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Contractual_Costs__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Contractual_Costs__c</fullName>
    <formula>gr_Contractual_Costs_1__c  + gr_Contractual_Costs_2__c  + gr_Contractual_Costs_3__c  + gr_Contractual_Costs_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Contractual Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>