force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Contribution_2__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Contribution_2__c</fullName>
    <formula>gr_Applicant_Contribution_2__c  + gr_State_Contribution_2__c + gr_Other_Sources_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Contribution 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>