force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Contribution__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Contribution__c</fullName>
    <formula>gr_Total_Applicant_Contribution__c  + gr_Total_State_Contribution__c  + gr_Total_Other_Sources__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>