force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Direct_Charges_1__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Direct_Charges_1__c</fullName>
    <formula>gr_Personnel_Requested_1__c +  gr_Fringe_Benefits_Requested_1__c  + gr_Travel_Requested_1__c  + gr_Equipment_Requested_1__c +  gr_Supplies_Requested_1__c  + gr_Contractual_Costs_1__c  + gr_Construction_Requested_1__c  + gr_Other_Category_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Direct Charges 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>