force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Direct_Charges_2__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Direct_Charges_2__c</fullName>
    <formula>gr_Personnel_Requested_2__c +  gr_Fringe_Benefits_Requested_2__c  + gr_Travel_Requested_2__c  + gr_Equipment_Requested_2__c +  gr_Supplies_Requested_2__c  + gr_Contractual_Costs_2__c  + gr_Construction_Requested_2__c  + gr_Other_Category_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Direct Charges 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>