force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Direct_Charges_3__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Direct_Charges_3__c</fullName>
    <formula>gr_Personnel_Requested_3__c +  gr_Fringe_Benefits_Requested_3__c  + gr_Travel_Requested_3__c  + gr_Equipment_Requested_3__c +  gr_Supplies_Requested_3__c  + gr_Contractual_Costs_3__c  + gr_Construction_Requested_3__c  + gr_Other_Category_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Direct Charges 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>