force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Direct_Charges__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Direct_Charges__c</fullName>
    <formula>gr_Total_Direct_Charges_1__c +  gr_Total_Direct_Charges_2__c +  gr_Total_Direct_Charges_3__c +  gr_Total_Direct_Charges_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Direct Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>