force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Federal_Est_Unobligated_Funds__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Federal_Est_Unobligated_Funds__c</fullName>
    <formula>gr_Federal_Estimated_Unobligated_Funds_1__c + gr_Federal_Estimated_Unobligated_Funds_2__c  + gr_Federal_Estimated_Unobligated_Funds_3__c  + gr_Federal_Estimated_Unobligated_Funds_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Federal Est. Unobligated Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>