force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_First_Year_Amount__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_First_Year_Amount__c</fullName>
    <formula>gr_First_Year_Amount_1__c + gr_First_Year_Amount_2__c + gr_First_Year_Amount_3__c +  gr_First_Year_Amount_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total First Year Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>