force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Forecasted_3rd_Quarter__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Forecasted_3rd_Quarter__c</fullName>
    <formula>gr_Federal_Forecasted_3rd_Quarter__c +  gr_Non_Federal_Forecasted_3rd_Quarter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Forecasted 3rd Quarter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>