force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Fringe_Benefits_Requested__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Fringe_Benefits_Requested__c</fullName>
    <formula>gr_Fringe_Benefits_Requested_1__c  + gr_Fringe_Benefits_Requested_2__c   + gr_Fringe_Benefits_Requested_3__c   + gr_Fringe_Benefits_Requested_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fringe Benefits Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>