force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Indirect_Charges__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Indirect_Charges__c</fullName>
    <formula>gr_Indirect_Charges_1__c +  gr_Indirect_Charges_2__c  + gr_Indirect_Charges_3__c +  gr_Indirect_Charges_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Indirect Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>