force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_New_or_Revised_Budget_2__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_New_or_Revised_Budget_2__c</fullName>
    <formula>gr_Federal_New_or_Revised_Budget_2__c +  gr_Non_Federal_New_or_Revised_Budget_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total New or Revised Budget_2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>