force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Non_Fed_Estimated_Unobligated__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Non_Fed_Estimated_Unobligated__c</fullName>
    <formula>gr_Non_Federal_Est_Unobligated_Funds_1__c  +  gr_Non_Federal_Est_Unobligated_Funds_2__c  + gr_Non_Federal_Est_Unobligated_Funds_3__c  + gr_Non_Federal_Est_Unobligated_Funds_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Non-Federal Estimated Unobligated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>