force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Other_Sources__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Other_Sources__c</fullName>
    <formula>gr_Other_Sources_1__c  + gr_Other_Sources_2__c  + gr_Other_Category_3__c  + gr_Other_Category_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Other Sources</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>