force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Personnel_Requested__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Personnel_Requested__c</fullName>
    <formula>gr_Personnel_Requested_1__c + gr_Personnel_Requested_2__c +  gr_Personnel_Requested_3__c  + gr_Personnel_Requested_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Personnel Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>