force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Program_Income__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Program_Income__c</fullName>
    <formula>gr_Program_Income_1__c  + gr_Program_Income_2__c +  gr_Program_Income_3__c  + gr_Program_Income_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Program Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>