force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Proj_Costs_of_Costs_Not_Allow__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Proj_Costs_of_Costs_Not_Allow__c</fullName>
    <formula>gr_Subtotal_Costs_Not_Allowable_w_Contg__c -  gr_Project_Income_Costs_Not_Allowable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Proj Costs of Costs Not Allowable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>