force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Proj_Costs_of_Total_Allow_Cost__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Proj_Costs_of_Total_Allow_Cost__c</fullName>
    <description>TOTAL PROJECT OF TOTAL ALLOWABLE COSTS (subtract #15 from #14)</description>
    <formula>gr_Subtotal_Total_Allow_Costs_w_Contg__c - gr_Project_Income_Total_Allowable_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Proj Costs of Total Allowable Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>