force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_Project_Costs_of_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_Project_Costs_of_Total_Cost__c</fullName>
    <formula>gr_Subtotal_Total_Cost_w_Contg__c -  gr_Project_Income_Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Project Costs of Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>