force-app/main/default/objects/Budget_Line_Item__c/fields/gr_Total_State_Contribution__c.field-meta.xml
<CustomField>
    <fullName>gr_Total_State_Contribution__c</fullName>
    <formula>gr_State_Contribution_1__c + gr_State_Contribution_2__c  + gr_State_Contribution_3__c  + gr_State_Contribution_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total State Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>