force-app/main/default/objects/Budget_Line_Item__c/recordTypes/gr_SF_424A.recordType-meta.xml
<RecordType>
    <fullName>gr_SF_424A</fullName>
    <active>true</active>
    <label>SF-424A</label>
</RecordType>