force-app/main/default/objects/Budget_Line_Item__c/recordTypes/gr_SF_424C.recordType-meta.xml
<RecordType>
    <fullName>gr_SF_424C</fullName>
    <active>true</active>
    <label>SF-424C</label>
</RecordType>