force-app/main/default/objects/Budget_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>gr_Federal_Estimated_Unobligated_Funds_1__c</columns>
    <columns>gr_Non_Federal_Est_Unobligated_Funds_1__c</columns>
    <columns>gr_Federal_New_or_Revised_Budget_1__c</columns>
    <columns>gr_Non_Federal_New_or_Revised_Budget_1__c</columns>
    <columns>gr_Federal_Estimated_Unobligated_Funds_2__c</columns>
    <columns>gr_Non_Federal_Est_Unobligated_Funds_2__c</columns>
    <columns>gr_Federal_New_or_Revised_Budget_2__c</columns>
    <columns>gr_Non_Federal_New_or_Revised_Budget_2__c</columns>
    <columns>gr_Federal_Estimated_Unobligated_Funds_3__c</columns>
    <columns>gr_Non_Federal_Est_Unobligated_Funds_3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>